# htf-tinker

./: LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yaml
htf/: __init__.py  relative.py  utils.py
htf/dev_guide/: READEME.md
htf/tests/: conftest.py  test_find_dummies.py  test_ghostly.py  test_htf.py  test_scale_factor.py  utils.py
htf/tests/data/: dimethyl_ether.sdf  propane.sdf  pyridine.sdf  toluene.sdf
htf/tests/data/ghostly/: chloroethane_ethane.json  ejm42_ejm54.json  hsp90_11.sdf  hsp90_11_hsp90_12.json  hsp90_12.sdf
minimisation_workflow/: minimise_workflow.py
